Completed first draft of sidebar.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <head>
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3" style="background-color: yellow">
-                    <p<
+                    <div id="contact-sidebar" class="card mt-5">
+                        <div class="card-header">Contact Name</div>
+
+                        <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Phone</li>
+                            <li class="list-group-item">Email</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col">
 
