Restructured side bar. Began work on nav.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Company</a>
+        </nav>
+
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3" style="background-color: yellow">
-                    <div id="contact-sidebar" class="card mt-5">
+                <div class="col-md-2">
+                    <div id="contact-sidebar" class="card">
                         <div class="card-header">Contact Name</div>
 
                         <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
@@ -22,7 +26,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" style="border-left: 1px solid black;">
 
                 </div>
             </div>
