Finalizing changes before light resdesign.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-2">
-                    <div id="contact-sidebar" class="card">
+                    <div id="contact-sidebar" class="card text-white bg-dark">
                         <div class="card-header">Contact Name</div>
 
                         <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
 
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Phone</li>
-                            <li class="list-group-item">Email</li>
+                            <li class="list-group-item bg-dark">Phone</li>
+                            <li class="list-group-item bg-dark">Email</li>
                         </ul>
                     </div>
                 </div>
