Setup basic popup layout.

--- a/contact.html
+++ b/contact.html
@@ -8,29 +8,22 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Company</a>
-        </nav>
+        <div id="contact-sidebar" class="card">
+            <div class="card-header">Contact Name</div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-2">
-                    <div id="contact-sidebar" class="card text-white bg-dark">
-                        <div class="card-header">Contact Name</div>
+            <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
 
-                        <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
-
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item bg-dark">Phone</li>
-                            <li class="list-group-item bg-dark">Email</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col" style="border-left: 1px solid black;">
-
-                </div>
-            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Phone</li>
+                <li class="list-group-item">Email</li>
+                <li class="list-group-item"><span class="text-primary">Select</span></li>
+            </ul>
         </div>
+
+        <div id="contact-area">
+
+        </div>
+
         <!-- More Bootstrap, also full jQuery -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
