Cleaned up popup layout, added header.

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h2 id="contact-header" class="bg-light">Contacts</h2>
+
         <div id="contact-sidebar" class="card">
             <div class="card-header">Contact Name</div>
 
@@ -21,7 +23,7 @@
         </div>
 
         <div id="contact-area">
-
+            
         </div>
 
         <!-- More Bootstrap, also full jQuery -->
