--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="contact-area">
-            
+            <p>Contact</p>
         </div>
 
         <!-- More Bootstrap, also full jQuery -->
