Finished basic JavaScript for showing and hiding  contact.

--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
         <h2 id="contact-header" class="bg-light">Contacts</h2>
 
         <div id="contact-sidebar" class="card">
-            <div class="card-header">Contact Name</div>
+            <div id="contact-sidebar-name" class="card-header">Contact Name</div>
 
             <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
 
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Phone</li>
-                <li class="list-group-item">Email</li>
+                <li id="contact-sidebar-phone" class="list-group-item">Phone</li>
+                <li id="contact-sidebar-email" class="list-group-item">Email</li>
                 <li class="list-group-item"><span class="text-primary">Select</span></li>
             </ul>
         </div>
