Added capability in index for displaying arbitrary contacts.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Company</a>
         </nav>
-        
+
         <p onclick="OpenContact();">Open contact window</p>
+
+        <h2 id="name">Name</h2>
+        <img id="img" src="">
+        <p id="phone">Phone</p>
+        <p id="email">Email</p>
 
         <!-- More Bootstrap, also full jQuery -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
