--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <ul class="list-group list-group-flush">
                 <li id="contact-sidebar-phone" class="list-group-item">Phone</li>
                 <li id="contact-sidebar-email" class="list-group-item">Email</li>
-                <li class="list-group-item"><span class="text-primary">Select</span></li>
+                <li id="contact-sidebar-select" class="list-group-item text-center"><span class="text-primary">Select</span></li>
             </ul>
         </div>
 
