--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="contact-area" class="clearfix">
-            <contact-box v-for="contact in contacts" v-bind:contact="contact"></contact-box>
+            <contact v-for="contact in contacts" v-bind:contact="contact"></contact-box>
         </div>
 
         <!-- More Bootstrap, also full jQuery -->
