--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,19 @@
         <h2 id="contact-header" class="bg-light">Contacts</h2>
 
         <div id="contact-sidebar" class="card">
-            <div id="contact-sidebar-name" class="card-header">Contact Name</div>
+            <div id="contact-sidebar-name" class="card-header">{{contact.name}}</div>
 
-            <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image.">
+            <img id="contact-sidebar-image" class="card-img" src="http://via.placeholder.com/300x300" alt="Contact's profile image." v-bind:src="contact.imageSrc">
 
             <ul class="list-group list-group-flush">
-                <li id="contact-sidebar-phone" class="list-group-item">Phone</li>
-                <li id="contact-sidebar-email" class="list-group-item">Email</li>
-                <li id="contact-sidebar-select" class="list-group-item text-center"><span class="text-primary">Select</span></li>
+                <li id="contact-sidebar-phone" class="list-group-item">{{contact.phone}}</li>
+                <li id="contact-sidebar-email" class="list-group-item">{{contact.email}}</li>
+                <li id="contact-sidebar-select" class="list-group-item text-center" v-on:click="SendContact"><span class="text-primary">Select</span></li>
             </ul>
         </div>
 
         <div id="contact-area" class="clearfix">
-            <contact v-for="contact in contacts" v-bind:contact="contact"></contact-box>
+            <contact v-for="contact in contacts" v-bind:contact="contact" v-bind:key="contact.id"></contact-box>
         </div>
 
         <!-- More Bootstrap, also full jQuery -->
